Updated navigation to work properly from Contact View. Also added Contact button to bottom of page for non-Contact pages

--- a/MVC-PersonalSite/MVC-PersonalSite/appsettings.json
+++ b/MVC-PersonalSite/MVC-PersonalSite/appsettings.json
@@ -2,11 +2,16 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-MVC_PersonalSite-0D805292-0639-47BA-9648-51FCBB2FD2F9;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+  
+
+  "Credentials": {
+    "Email": {
+      "Client": "mail.stavakoli.net",
+      "User": "admin@stavakoli.net",
+      "Password": "HolyPanda@44",
+      "Recipient": "sarra.tavakoli@gmail.com"
     }
   },
+
   "AllowedHosts": "*"
 }
